# My-Encoder

./: Automaton.h  CMakeLists.txt  ColonAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.h  DatalogProgram.h  FactsAutomaton.h  Graph.h  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MachineAutomaton.cpp  MachineAutomaton.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  QueriesAutomaton.h  README.md  Relation.cpp  Relation.h  Rule.h  RulesAutomaton.h  SchemesAutomaton.h  SingleCommentAutomaton.cpp  SingleCommentAutomaton.h  String.cpp  String.h  Token.cpp  Token.h  Tuple.h  main.cpp
